# BodyHand_linux

./: .gitignore  CMakeLists.txt  calib.cfg  gen_config.py
.cache/clangd/index/: CMultiCap.cpp.99D6683E3D703D40.idx  CMultiCap.h.4A8D70B48DB049E4.idx  CameraController.h.F41D4424DEC469C3.idx  HaMeRONNX.cpp.4058CD3444DB7851.idx  HaMeRONNX.h.411BEB4F95FF5D60.idx  MultiCap.cpp.491EC8ABD388532F.idx  MultiCap.h.9D52E5837F12D98D.idx  MvCamera.cpp.012425BFB6E34685.idx  MvCamera.h.2A8B458FCA42F220.idx  Pose3D.cpp.4ED3621386D93A37.idx  Pose3D.h.0055C734DEFA6CD0.idx  VitInference.cpp.59AB533F87308D60.idx  VitInference.h.F5A84AF087A0FCAC.idx  YoloONNX.cpp.B4397C50CA42E7B8.idx  YoloONNX.h.34279904B53EFC4A.idx  YoloOnnxDet.cpp.05549DB61830726D.idx  YoloOnnxDet.h.9A78A1FCA585D325.idx  argparse.h.325CAAFC866D6817.idx  base.h.5B86B3AA0BD510D8.idx  constants.h.29257C7FA01CD092.idx  core.h.39804A7EC7B12760.idx  denoise.cpp.E383CF1B95F7663C.idx  denoise.h.BFADFBF1E18EF832.idx  detectChessboardCorner.cpp.CE83E2A0498124E1.idx  detectChessboardCorner.h.B8DFC714338C8C7D.idx  format-inl.h.6A19970D4B5CC428.idx  format.cc.C71394245E6FD35D.idx  format.h.1B274B6A372E5C24.idx  main_Calibration.cpp.6CAC3E6326DDD4BC.idx  main_MultiViewPoseEstimation.cpp.7586EE06817B3B47.idx  main_SingleCalibration.cpp.BA7C57FC20600A02.idx  main_SynchronizeCapture.cpp.78FCEA4482B1105A.idx  multiCameraBA.cpp.178CE9B8B2A442CA.idx  multiCameraBA.h.91BBC0B82F5FCC5E.idx  multiCameraCalibration.cpp.3E5F3A1797B2E8DF.idx  multiCameraCalibration.h.E6019F55332BAD21.idx  onnxruntime_c_api.h.1DC8C8B634580B40.idx  onnxruntime_cxx_api.h.16132306E16DB2C1.idx  onnxruntime_cxx_inline.h.5CD1721D01EC9970.idx  os.cc.9D32163D90DB4E9F.idx  (+7 more)
include/: CMultiCap.h  CameraController.h  HaMeRONNX.h  MultiCap.h  MvCamera.h  Pose3D.h  VitInference.h  YoloONNX.h  YoloOnnxDet.h  argparse.h  constants.h  denoise.h  detectChessboardCorner.h  multiCameraBA.h  multiCameraCalibration.h  tcp_server.h  visualization.h
scripts/: gen_config.py
src/: CMultiCap.cpp  HaMeRONNX.cpp  MultiCap.cpp  MvCamera.cpp  Pose3D.cpp  VitInference.cpp  YoloONNX.cpp  YoloOnnxDet.cpp  denoise.cpp  detectChessboardCorner.cpp  main_Calibration.cpp  main_MultiViewPoseEstimation.cpp  main_SingleCalibration.cpp  main_SynchronizeCapture.cpp  multiCameraBA.cpp  multiCameraCalibration.cpp  stb_image_write.cpp  tcp_server.cpp  visualization.cpp
